# Transform_frames

./: .gitignore  CODE_STRUCTURE_MAP.md  DOCKER_DEPLOYMENT.md  Dockerfile  FIREBASE_MIGRATION.md  FIREBASE_README.md  FIRESTORE_DATA_CONFIGURATION.md  FIRESTORE_SETUP.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_CHECKLIST.md  QUICKSTART_DOCKER.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  TAG_TRACKER_README.md  docker-compose.yml  setup_firebase.sh  transform.py  transform_rot.py  transform_tf_output.py
libuwb_transform/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  build.sh
libuwb_transform/config/: transform_config.json
libuwb_transform/docs/: COMPARISON.md  PROJECT_STRUCTURE.md  VERIFICATION.md
libuwb_transform/include/: FloorplanTransformer.hpp
libuwb_transform/src/: FloorplanTransformer.cpp  main.cpp
manager_scripts/: README.md  bridge_manager.py  tag_tracker.py  task_tag_tracker.py  validate_setup.py
uwb_bridge_cpp/: .gitignore  BRIDGE_MANAGER_README.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  QUICKSTART_BRIDGE_MANAGER.md  README.md  SIDECAR_IMPLEMENTATION.md  bridge_manager.py  build.sh  google-services-desktop.json  requirements.txt  test_hivemq.sh  validate_setup.py
uwb_bridge_cpp/config/: app_config.json  firestore_example.json  test_config.json
uwb_bridge_cpp/deploy/: install.sh  install_manager.sh  uwb-bridge-firestore.service  uwb-bridge-manager.service  uwb-bridge.service
uwb_bridge_cpp/docker/: Dockerfile  docker-compose.yml
uwb_bridge_cpp/include/: BridgeCore.hpp  ConfigLoader.hpp  FirestoreManager.hpp  MqttHandler.hpp
uwb_bridge_cpp/src/: BridgeCore.cpp  ConfigLoader.cpp  FirestoreManager.cpp  MqttHandler.cpp  main.cpp
uwb_bridge_cpp/tools/: LOAD_TEST_README.md  load_test.py
